--- a/WebApp/src/main/webapp/app/entities/student-app/update/student-app-update.component.html
+++ b/WebApp/src/main/webapp/app/entities/student-app/update/student-app-update.component.html
@@ -75,6 +75,23 @@
         </div>
 
         <div class="mb-3">
+          <label class="form-label" for="field_profile" jhiTranslate="simpleWebApp.student.profile">Profile</label>
+          <select
+            class="form-control"
+            id="field_profile"
+            data-cy="profile"
+            name="profile"
+            formControlName="profile"
+            [compareWith]="compareStudentProfileApp"
+          >
+            <option [ngValue]="null"></option>
+            @for (studentProfileOption of profilesCollection; track $index) {
+              <option [ngValue]="studentProfileOption">{{ studentProfileOption.id }}</option>
+            }
+          </select>
+        </div>
+
+        <div class="mb-3">
           <label for="field_courses" jhiTranslate="simpleWebApp.student.course">Course</label>
           <select
             class="form-control"
