--- a/WebApp/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/WebApp/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -79,6 +79,18 @@
                   <span jhiTranslate="global.menu.entities.studentApp">Student</span>
                 </a>
               </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  routerLink="/student-profile-app"
+                  routerLinkActive="active"
+                  [routerLinkActiveOptions]="{ exact: true }"
+                  (click)="collapseNavbar()"
+                >
+                  <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
+                  <span jhiTranslate="global.menu.entities.studentProfileApp">Student Profile</span>
+                </a>
+              </li>
               <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
             </ul>
           </li>
